@@ -17,6 +17,9 @@ didn't try the next IP if the first one failed and returned error.
 
 Fixed: Issue #764: Monit may crash if "unmonitor" or "stop" action was triggered by some test
 
+Fixed: Issue #769: Monit CLI status command doesn't work if only read-only credentials is present
+in the 'set httpd' statement.
+
 
 Version 5.25.2
 
